kubernetes/archive/deploy/proxies/internal/backupvault/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: backupvault
subsets:
  - addresses:
      - ip: 192.168.100.15
    ports:
      - port: 5000
        name: http
